Bug 460136 - Updating Bibata Modern Ice cursor theme fails due to lack of interactivity during upgrade process
Summary: Updating Bibata Modern Ice cursor theme fails due to lack of interactivity du...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: KNewStuff Backend (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-08 22:03 UTC by Nate Graham
Modified: 2022-12-15 00:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2022-10-08 22:03:32 UTC
Everything KDE from git master.

Discover shows me an upgrade from version 1.1.2 to 2.0.1 for the Bibata Modern Ice cursor theme. When I try to upgrade to it, the update process gets stuck at 0% forever. Console log shows the following relevant-looking output:

"The downloaded file is a html file. This indicates a link to a website instead of the actual download. Would you like to open the site with a browser instead?" KNSCore::Question::YesNoQuestion

However this message is not shown in the UI anywhere, and no interactivity is provided to resolve the situation. It looks like there may be an issue with the content of this update, but Discover failing to show the message and offer resolution options is also a bug.
Comment 1 Bug Janitor Service 2022-12-03 02:35:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/215
Comment 2 Bug Janitor Service 2022-12-03 02:38:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/433
Comment 3 Aleix Pol 2022-12-14 23:52:24 UTC
Git commit 09c99ea6d9f9649f79dfe38641040c89acdff5b0 by Aleix Pol.
Committed on 14/12/2022 at 15:59.
Pushed by apol into branch 'master'.

KNSCore::Question: Include the entry in the question

More often than not, a question will be about an entry. This is relevant
information about the question. Include the entry in the question so the
client can relate it to e.g. a transaction, as needed by Discover.

M  +1    -0    src/attica/atticaprovider.cpp
M  +3    -0    src/core/installation.cpp
M  +18   -4    src/core/question.cpp
M  +4    -0    src/core/question.h

https://invent.kde.org/frameworks/knewstuff/commit/09c99ea6d9f9649f79dfe38641040c89acdff5b0
Comment 4 Nate Graham 2022-12-15 00:26:10 UTC
Git commit 6ed2a45978a5ed04275a79525797f65f5ed1909a by Nate Graham, on behalf of Aleix Pol.
Committed on 15/12/2022 at 00:24.
Pushed by ngraham into branch 'master'.

kns: Add support for questions

Splits KNSTransaction into a separate file and attaches a
QuestionListener to each to know if there's a question related to our
resource.

The ContinueCancel questions we map them into the proceed/cancel
abstraction that Transaction already has.
The rest, we don't have the UX for at the moment, but at least we cancel
the transaction and we show an error message instead of letting our
users wonder.

M  +3    -1    libdiscover/backends/KNSBackend/CMakeLists.txt
M  +25   -82   libdiscover/backends/KNSBackend/KNSBackend.cpp
A  +104  -0    libdiscover/backends/KNSBackend/KNSTransaction.cpp     [License: GPL(3+eV) GPL(v3.0) GPL(v2.0)]
A  +34   -0    libdiscover/backends/KNSBackend/KNSTransaction.h     [License: GPL(3+eV) GPL(v3.0) GPL(v2.0)]

https://invent.kde.org/plasma/discover/commit/6ed2a45978a5ed04275a79525797f65f5ed1909a